[package]
name = "rcdecl"
version = "0.1.0"
authors = ["Achille Heraud <achille@heraud.xyz>"]
edition = "2018"

[dependencies]
lexer = { git = "https://github.com/aHeraud/cc", rev ="aa6cb8ce7eb726ab93e705eb776307c72e8bb796" }
parser = { git = "https://github.com/aHeraud/cc", rev ="aa6cb8ce7eb726ab93e705eb776307c72e8bb796" }
types = { git = "https://github.com/aHeraud/cc", rev ="aa6cb8ce7eb726ab93e705eb776307c72e8bb796" }
ast = { git = "https://github.com/aHeraud/cc", rev ="aa6cb8ce7eb726ab93e705eb776307c72e8bb796" }
errors = { git = "https://github.com/aHeraud/cc", rev ="aa6cb8ce7eb726ab93e705eb776307c72e8bb796" }